--- a/FsLab.Tutorial.fsproj
+++ b/FsLab.Tutorial.fsproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Tutorial.fsx" />
+    <None Include="Demo.fsx" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
